--- a/intearctive-mode-template/product_list1.html
+++ b/intearctive-mode-template/product_list1.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="css/main.min.css" />
 </head>
 
-<body>
+<body style="width: 1080px; height: 1920px;">
   <header class="site-header w-100 interactive-mode">
     <div class="top-panel">
       <h3>หาสินค้าไม่เจอ...ให้น้อง XP ช่วยได้นะคะ</h3>
@@ -27,11 +27,13 @@
       </figure>
     </div>
 
-    <div class="content-panel">
-      <div class="d-flex flex-column justify-content-center align-items-center bg-light h-100 w-100" style="
+    <div class="content-panel" style="height: 950px;">
+      <div class="d-flex flex-column justify-content-center align-items-center bg-light h-100 w-100"
+        style="
       background-image: url('/intearctive-mode-template/images/gray-bg.png'); background-size:100%; z-index: 0; position: relative;">
-        <h1 class="d-flex justify-content-around align-items-center pb-5" style="z-index: 2; font-size: 40px;">กรุณาเลือกเมนูที่สนใจ</h1>
-        <div class="d-flex justify-content-around align-items-center w-75" style="z-index: 2;">
+        <h1 class="d-flex justify-content-around align-items-center pb-5" style="z-index: 2; font-size: 40px;">
+          กรุณาเลือกเมนูที่สนใจ</h1>
+        <div class="d-flex justify-content-between align-items-center w-75" style="z-index: 2;">
           <div class="bg-white d-flex flex-column justify-content-between border-0 shadow p-5"
             style="width: 250px; height: 250px;">
             <figure class="text-end">
@@ -55,7 +57,8 @@
           </div>
         </div>
 
-        <img class="position-absolute" src="./images/interior.png" alt="interior-bg" style="z-index: 1; bottom: 5%; right: 5%;">
+        <img class="position-absolute" src="./images/interior.png" alt="interior-bg"
+          style="z-index: 1; bottom: 0px; right: 0px;">
       </div>
     </div>
 
