--- a/intearctive-mode-template/ceilling_and_wall1.html
+++ b/intearctive-mode-template/ceilling_and_wall1.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Product List 1</title>
+  <title>Ceilling And Wall 1</title>
   <link rel="stylesheet" href="css/main.min.css" />
 </head>
 
@@ -33,23 +33,23 @@
       background-image: url('/intearctive-mode-template/images/gray-bg.png'); background-size:100%; z-index: 0; position: relative;">
         <h1 class="d-flex justify-content-around align-items-center pb-5" style="z-index: 2; font-size: 40px;">
           กรุณาเลือกเมนูที่สนใจ</h1>
-        <div class="d-flex justify-content-between align-items-center w-75" style="z-index: 2;">
-          <div class="bg-white d-flex flex-column justify-content-between border-0 shadow p-5"
-            style="width: 250px; height: 250px;">
+        <div class="d-flex align-items-center justify-content-center w-75" style="z-index: 2;">
+          <div class="bg-white d-flex flex-column justify-content-between border-0 shadow p-5 mx-4"
+            style="width: 250px; height: 250px; border-radius: 10px; cursor: pointer;">
             <figure class="text-end">
               <img src="images/house-logo.png" class="img-fluid" alt="girl with tab" />
             </figure>
             <h2>โซลูชั่นฟาซาด</h2>
           </div>
-          <div class="bg-white d-flex flex-column justify-content-between border-0 shadow p-5"
-            style="width: 250px; height: 250px;">
+          <div class="bg-white d-flex flex-column justify-content-between border-0 shadow p-5 mx-4"
+            style="width: 250px; height: 250px; border-radius: 10px; cursor: pointer;">
             <figure class="text-end">
               <img src="images/view-logo.png" class="img-fluid" alt="girl with tab" />
             </figure>
             <h2><span>โซลูชั่นตกแต่ง</span></br>ภูมิทัศน์ภานอก</h2>
           </div>
-          <div class="bg-white d-flex flex-column justify-content-between border-0 shadow p-5"
-            style="width: 250px; height: 250px;">
+          <div class="bg-white d-flex flex-column justify-content-between border-0 shadow p-5 mx-4"
+            style="width: 250px; height: 250px; border-radius: 10px; cursor: pointer;">
             <figure class="text-end">
               <img src="images/vr-logo.png" class="img-fluid" alt="girl with tab" />
             </figure>
