update cw and roof header

--- a/intearctive-mode-template/roof1.html
+++ b/intearctive-mode-template/roof1.html
@@ -11,9 +11,10 @@
 
 <body style="width: 1080px; height: 1920px;">
   <header class="site-header w-100 interactive-mode">
-    <div class="top-panel">
-      <h3>หาสินค้าไม่เจอ...ให้น้อง XP ช่วยได้นะคะ</h3>
+    <div class="top-panel-custom">
+      <h4>คุณอยู่ที่</h4> <h3>ROOF</h3>
     </div>
+
 
   </header>
   <main class="main-content w-100 interactive-mode">
