--- a/intearctive-mode-template/ceiling_and_wall2.html
+++ b/intearctive-mode-template/ceiling_and_wall2.html
@@ -10,9 +10,10 @@
 </head>
 <body style="width:1080px; height: 1928px;">
   <header class="site-header w-100 interactive-mode">
-      <div class="top-panel">
-          <h3>หาสินค้าไม่เจอ...ให้น้อง XP ช่วยได้นะคะ</h3>
-      </div>
+    <div class="top-panel-custom">
+      <h4>คุณอยู่ที่</h4> <h3>CEILING & WALL</h3>
+    </div>
+
    
   </header>
   <main class="main-content w-100 interactive-mode">
