--- a/intearctive-mode-template/ceilling_and_wall1.html
+++ b/intearctive-mode-template/ceilling_and_wall1.html
@@ -7,12 +7,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Ceilling And Wall 1</title>
   <link rel="stylesheet" href="css/main.min.css" />
+  <link rel="stylesheet" href="css/custom/global_custom.css" />
 </head>
 
 <body style="width: 1080px; height: 1920px;">
   <header class="site-header w-100 interactive-mode">
-    <div class="top-panel">
-      <h3>หาสินค้าไม่เจอ...ให้น้อง XP ช่วยได้นะคะ</h3>
+    <div class="top-panel-custom">
+      <h4>คุณอยู่ที่</h4> <h3>CEILING & WALL</h3>
     </div>
 
   </header>
