create cw template 2

--- a/intearctive-mode-template/cw_template2.html
+++ b/intearctive-mode-template/cw_template2.html
@@ -5,19 +5,18 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Roof 1</title>
+  <title>CW_TEMPLATE 2</title>
   <link rel="stylesheet" href="css/main.min.css" />
   <link rel="stylesheet" href="css/custom/global_custom.css" />
-  <link rel="stylesheet" href="css/custom/product_list1.css" />
+  <link rel="stylesheet" href="css/custom/cw_template2.css" />
 </head>
 
 <body style="width: 1080px; height: 1920px;">
   <header class="site-header w-100 interactive-mode">
     <div class="top-panel-custom">
       <h4>คุณอยู่ที่</h4>
-      <h3>ROOF</h3>
+      <h3>CEILING & WALL</h3>
     </div>
-
 
   </header>
   <main class="main-content w-100 interactive-mode">
@@ -32,24 +31,15 @@
     </div>
 
     <div class="content-panel" style="height: 950px;">
-      <div class="content-sectiion-product-list-1">
-        <h1>กรุณาเลือกกลุ่มสินค้าหรือบริการที่สนใจ</h1>
-        <div class="group-menu-product-list-1">
-          <div class="product-item-product-list-1">
-            <figure class="text-end">
-              <img src="images/house-paper-logo.png" class="img-fluid" alt="girl with tab" />
-            </figure>
-            <h2>บริการเรื่องบ้าน</h2>
-          </div>
-          <div class="product-item-product-list-1">
-            <figure class="text-end">
-              <img src="images/star-logo.png" class="img-fluid" alt="girl with tab" />
-            </figure>
-            <h2><span>สินค้าแนะนำ</h2>
-          </div>
+      <div class="content-sectiion-temp-2">
+        <div class="fist-content">
+          <h4>สัมผัสประสบการณ์เสมือนจริง</h4>
+          <h3>virtual experiences</h3>
+          <img src="./images/360-white.png" alt="360">
         </div>
-
-        <img class="interior-product-list-1" src="./images/interior.png" alt="interior-bg">
+        <div class="second-content">
+          <h3>Promotion</h3>
+        </div>
       </div>
     </div>
 
