--- a/intearctive-mode-template/ceiling_and_wall1.html
+++ b/intearctive-mode-template/ceiling_and_wall1.html
@@ -5,9 +5,10 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Ceilling And Wall 1</title>
+  <title>Ceiling And Wall 1</title>
   <link rel="stylesheet" href="css/main.min.css" />
   <link rel="stylesheet" href="css/custom/global_custom.css" />
+  <link rel="stylesheet" href="css/custom/product_list1.css" />
 </head>
 
 <body style="width: 1080px; height: 1920px;">
@@ -29,28 +30,22 @@
     </div>
 
     <div class="content-panel" style="height: 950px;">
-      <div class="d-flex flex-column justify-content-center align-items-center bg-light h-100 w-100"
-        style="
-      background-image: url('/intearctive-mode-template/images/gray-bg.png'); background-size:100%; z-index: 0; position: relative;">
-        <h1 class="d-flex justify-content-around align-items-center pb-5" style="z-index: 2; font-size: 40px;">
-          กรุณาเลือกเมนูที่สนใจ</h1>
-        <div class="d-flex align-items-center justify-content-center w-75" style="z-index: 2;">
-          <div class="bg-white d-flex flex-column justify-content-between border-0 shadow p-5 mx-4"
-            style="width: 250px; height: 250px; border-radius: 10px; cursor: pointer;">
+      <div class="content-sectiion-product-list-1">
+        <h1>กรุณาเลือกเมนูที่สนใจ</h1>
+        <div class="group-menu-product-list-1">
+          <div class="product-item-product-list-1">
             <figure class="text-end">
               <img src="images/house-logo.png" class="img-fluid" alt="girl with tab" />
             </figure>
             <h2>โซลูชั่นฟาซาด</h2>
           </div>
-          <div class="bg-white d-flex flex-column justify-content-between border-0 shadow p-5 mx-4"
-            style="width: 250px; height: 250px; border-radius: 10px; cursor: pointer;">
+          <div class="product-item-product-list-1">
             <figure class="text-end">
               <img src="images/view-logo.png" class="img-fluid" alt="girl with tab" />
             </figure>
             <h2><span>โซลูชั่นตกแต่ง</span></br>ภูมิทัศน์ภานอก</h2>
           </div>
-          <div class="bg-white d-flex flex-column justify-content-between border-0 shadow p-5 mx-4"
-            style="width: 250px; height: 250px; border-radius: 10px; cursor: pointer;">
+          <div class="product-item-product-list-1">
             <figure class="text-end">
               <img src="images/vr-logo.png" class="img-fluid" alt="girl with tab" />
             </figure>
@@ -58,8 +53,7 @@
           </div>
         </div>
 
-        <img class="position-absolute" src="./images/interior.png" alt="interior-bg"
-          style="z-index: 1; bottom: 0px; right: 0px;">
+        <img class="interior-product-list-1" src="./images/interior.png" alt="interior-bg">
       </div>
     </div>
 
