--- a/intearctive-mode-template/cw_template2.html
+++ b/intearctive-mode-template/cw_template2.html
@@ -30,12 +30,12 @@
       </figure>
     </div>
 
-    <div class="content-panel" style="height: 950px;">
+    <div class="content-panel" style="height: 1150px; background: transparent;">
       <div class="content-sectiion-temp-2">
         <div class="fist-content">
-          <h4>สัมผัสประสบการณ์เสมือนจริง</h4>
-          <h3>virtual experiences</h3>
-          <img src="./images/360-white.png" alt="360">
+          <video autoplay muted loop playsinline preload="metadata">
+            <source src="http://www.adrianparr.com/download/keyboard-video.mp4" type="video/mp4">
+          </video>
         </div>
         <div class="second-content">
           <h3>Promotion</h3>
