home selected flow htmls

--- a/intearctive-mode-template/home-selected-flow.html
+++ b/intearctive-mode-template/home-selected-flow.html
@@ -18,9 +18,10 @@
   <main class="main-content w-100 mt-0 interactive-mode2">
     <div class="quote-section  strip1">
         <p><em>“</em>
-             หากสนใจ คุณลูกค้าสามารถ<br>
-            แจ้งพนักงานหรือสั่งซื้อออนไลน์ได้เลยค่ะ
-          <em>“</em>
+          หากสนใจ คุณลูกค้าสามารถ <br>
+          แจ้งพนักงานหรือสั่งซื้อออนไลน์ได้เลยค่ะ 
+          
+          <em>"</em>
           </p>
           <figure>
               <img src="images/girl-big.png" class="img-fluid" alt="girl with tab"/>
@@ -78,7 +79,7 @@
               <h6>รหัสสินค้า 8857126925012</h6>
               <h2>Bewell เบาะรองหลัง Ergo-Cushion
                 Serie Back EC-01 (Cooling Cotton)</h2>
-                <label>ฺBewell</label>
+                <label>Bewel</label>
                 <p><span>ราคา</span>1,490 บาท <a href="#">สินค้าจัดส่งที่บ้าน</a></p>
                 <ul><li>สายรัดกับเก้าอี้ให้ปรับระดับได้ เพื่อปรับให้เข้า</li>
                 <li>กับสรีระของแผ่นหลังเรา ตัวเบาะเมมโมรี่โฟม นั่งแล้วตัวไม่ยุบหายลงไปพร้อมคืนตัว 100%</li>
@@ -98,6 +99,7 @@
           </div>
         </div>
         <div class="video-gallery">
+          <h3>แกลเลอรี่</h3>
           <div class="row">
             <div class="col-6 wrapper">
              <figure type="button"> <img src="images/dummy-yt1.jpg"/></figure>
