home selected htmls

--- a/intearctive-mode-template/home-selected-flow.html
+++ b/intearctive-mode-template/home-selected-flow.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="th">
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>xp-inno-smart-display</title>
   <link rel="stylesheet" href="css/main.min.css" />
+  <script type="text/javascript">
+    jQuery.noConflict();
+    // Code that uses other library's $ can follow here.
+  </script>
 </head>
 <body>
   <header class="site-header w-100 header-vb plain">
@@ -17,12 +21,7 @@
   </header>
   <main class="main-content w-100 mt-0 interactive-mode2">
     <div class="quote-section  strip1">
-        <p><em>“</em>
-          หากสนใจ คุณลูกค้าสามารถ <br>
-          แจ้งพนักงานหรือสั่งซื้อออนไลน์ได้เลยค่ะ 
-          
-          <em>"</em>
-          </p>
+        <p>“ หากสนใจ คุณลูกค้าสามารถ <br> แจ้งพนักงานหรือสั่งซื้อออนไลน์ได้เลยค่ะ ”</p>
           <figure>
               <img src="images/girl-big.png" class="img-fluid" alt="girl with tab"/>
           </figure>
