edit template 2 videos loop

--- a/intearctive-mode-template/pages/home_select_template1.html
+++ b/intearctive-mode-template/pages/home_select_template1.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="../css/custom/template1.css" />
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 </head>
-<body>
+<body style="width: 1080px; height: 1920px;">
   <main class="main-content w-100 interactive-mode template1-body-custom main-sizing">
     <div class="top-panel-custom2 position-relative">
 
