--- a/intearctive-mode-template/pages/roof_template1.html
+++ b/intearctive-mode-template/pages/roof_template1.html
@@ -15,14 +15,14 @@
     <div class="top-panel-custom2 position-relative">
 
       <div class="position-absolute top-50 start-50 translate-middle">
-        <div class = 'd-flex justify-content-center'><h4>โซน</h4> <h3>Home Selected</h3></div>
-        <div class = 'd-flex justify-content-center pt-4'> <p>คัดสรรสินค้าทั้งไทยและต่างประเทศมาไว้ที่นี้</p></div>\
+        <div class = 'd-flex justify-content-center'><h4>กลุ่มสินค้า</h4> <h3>ROOF</h3></div>
+        <div class = 'd-flex justify-content-center pt-4'> <p> นวัตกรรมหลังคา เพื่อบ้านอยู่สบาย ประหยัดพลังงาน </p></div>\
       </div>
 
     </div>
     <div class="template1-content-panel position-relative ">
             <div id="home-select-video-panel" class="template1-video-panel">
-            <video width="100%" height="100%" autoplay>
+              <video width="100%" height="100%" autoplay>
                 <source src="" type="video/mp4">
                 <!-- <source src="movie.ogg" type="video/ogg"> -->
               Your browser does not support the video tag.
@@ -82,7 +82,7 @@
       // };
       // playAllVideo()
 
-      var videos = jd.page.home_selected.front.videos;
+      var videos = jd.page.roof.front.videos;
       console.log(videos)
       $('#home-select-video-panel video source').attr('src', videos[0].url)
       $("#home-select-video-panel video")[0].load();
