--- a/intearctive-mode-template/home-selected-flow.html
+++ b/intearctive-mode-template/home-selected-flow.html
@@ -21,7 +21,7 @@
   </header>
   <main class="main-content w-100 mt-0 interactive-mode2">
     <div class="quote-section  strip1">
-        <p>“ หากสนใจ คุณลูกค้าสามารถ <br> แจ้งพนักงานหรือสั่งซื้อออนไลน์ได้เลยค่ะ ”</p>
+        <p><em>“</em> หากสนใจ คุณลูกค้าสามารถ <br> แจ้งพนักงานหรือสั่งซื้อออนไลน์ได้เลยค่ะ <em>”</em></p>
           <figure>
               <img src="images/girl-big.png" class="img-fluid" alt="girl with tab"/>
           </figure>
