--- a/intearctive-mode-template/pages/home_select_template1.html
+++ b/intearctive-mode-template/pages/home_select_template1.html
@@ -12,17 +12,15 @@
 </head>
 <body style="width: 1080px; height: 1920px;">
   <main class="main-content w-100 interactive-mode template1-body-custom main-sizing">
-    <div class="top-panel-custom2 position-relative">
-
-      <div class="position-absolute top-50 start-50 translate-middle">
+    <div class="top-panel-custom2 d-flex justify-content-center align-items-center">
+      <div class="position-absolute">
         <div class = 'd-flex justify-content-center'><h4>โซน</h4> <h3>Home Selected</h3></div>
         <div class = 'd-flex justify-content-center pt-4'> <p>คัดสรรสินค้าทั้งไทยและต่างประเทศมาไว้ที่นี้</p></div>\
       </div>
-
     </div>
     <div class="template1-content-panel position-relative ">
             <div id="home-select-video-panel" class="template1-video-panel">
-            <video width="100%" height="100%" autoplay>
+            <video width="100%" height="100%" autoplay muted>
                 <source src="" type="video/mp4">
                 <!-- <source src="movie.ogg" type="video/ogg"> -->
               Your browser does not support the video tag.
@@ -63,59 +61,31 @@
 <script>
   $(document).ready(function(){
     $.getJSON('../configs.json', function(jd) {
-      // const play = (video_url, vid_duration) =>
-      // new Promise(resolve =>
-      //   setTimeout(() => resolve(video_url), vid_duration*1000)
-      // );
+
+
+      const play = (video_url, vid_duration) =>
+        new Promise(resolve =>
+          setTimeout(() => resolve(video_url), vid_duration*1000)
+      );
         
-      // const playAllVideo = async () => {
-      //   for (var i=0; i<jd.page.home_selected.front.videos.length; i++) {
-      //     $('#home-select-video-panel source').attr('src', jd.page.home_selected.front.videos[i].url)
-      //     $("#home-select-video-panel video")[0].load();
-      //     $("#home-select-video-panel video")[0].play();
-      //     console.log('play video')
-      //     const video_url = await play(jd.page.home_selected.front.videos[i].url, jd.page.home_selected.front.videos[i].duration);
-      //     console.log(`video  ${video_url} played`);
+      const playAllVideo = async () => {
+        for (var i=0; i<jd.page.home_selected.front.videos.length; i++) {
+          $('#home-select-video-panel source').attr('src', jd.page.home_selected.front.videos[i].url)
+          $("#home-select-video-panel video")[0].load();
+          $("#home-select-video-panel video")[0].play();
+          console.log('play video')
+          const video_url = await play(jd.page.home_selected.front.videos[i].url, jd.page.home_selected.front.videos[i].duration);
+          console.log(`video  ${video_url} were played`);
 
-      //   }
-      //   console.log('All videos were played');
-      // };
-      // playAllVideo()
-
-      var videos = jd.page.home_selected.front.videos;
-      console.log(videos)
-      $('#home-select-video-panel video source').attr('src', videos[0].url)
-      $("#home-select-video-panel video")[0].load();
-
-      var i = 1;
-      function myLoop() {
-          setTimeout(function () {
-              console.log('play '+ i)
-              $('#home-select-video-panel video source').attr('src', videos[i].url)
-              $("#home-select-video-panel video")[0].load();
-              console.log('play '+ i + ' finish')
-              i++;
-              if (i < videos.length) {
-                  myLoop();
-              }
-              else {
-                  // IF Fisnish video array loop
-                  // i = 0;
-                  // myLoop();
-                  // window.location.href = "home_select_template2.html";
-              }
-          }, videos[i].duration * 1000)
-      }
-      myLoop();
-
-
-
-      
-
+        }
+        console.log('All videos were played');
+        $("#home-select-video-panel video")[0].pause();
+        window.location.href = 'home_select_template2.html'
+      };
+      playAllVideo()
     }).fail(function(){
       console.log('fail')
     });
-  // alert('hi')
 });
 </script>
 </html>
