pdp htmls updated

--- a/intearctive-mode-template/pages/cw_product_details.html
+++ b/intearctive-mode-template/pages/cw_product_details.html
@@ -132,11 +132,11 @@
           <img src="../images/qrcode.png"/>
         </li>
         <li>
-          <label><i class="icon-insta mx-1"><img src="images/insta.svg"/></i> Instagram</label>
+          <label><i class="icon-insta mx-1"><img src="../images/insta.svg"/></i> Instagram</label>
           <img src="../images/qrcode.png"/>
         </li>
         <li>
-          <label><i class="icon-yt mx-1"><img src="images/yt.svg"/></i> Youtube</label>
+          <label><i class="icon-yt mx-1"><img src="../images/yt.svg"/></i> Youtube</label>
           <img src="../images/qrcode.png"/>
         </li></ul>
         <p>รับข่าวสารและโปรโมชั่นก่อนใคร<br>
