--- a/intearctive-mode-template/pages/roof_product_list.html
+++ b/intearctive-mode-template/pages/roof_product_list.html
@@ -18,7 +18,7 @@
     <header class="site-header w-100 header-vb plain">
         <div class="top-panel">
             <h4>คุณอยู่ที่</h4>
-            <h3>Ceiling & wall</h3>
+            <h3>SCG ROOF EXPERT</h3>
         </div>
 
     </header>
@@ -153,7 +153,7 @@
     $(document).ready(function () {
         $.getJSON('../configs.json', function (jd) {
             let count = 0;
-            for (const [main_menu, main_menu_obj] of Object.entries(jd.category_product.ceiling_and_wall.sub_category_product)) {
+            for (const [main_menu, main_menu_obj] of Object.entries(jd.category_product.roof.sub_category_product)) {
 
                 console.log(`รอบที่ ${count} ${main_menu}`)
                 
@@ -169,9 +169,9 @@
                     </li>
                 `)
 
-                $(`#${nav_id}`).click(function(){
-                    $(`#${nav_id} img`).attr('src', '')
-                })
+                // $(`#${nav_id}`).click(function(){
+                //     $(`#${nav_id} img`).attr('src', '')
+                // })
 
                 // สร้างโครงสำหรับใส่ content แต่ละ id                
                 // let content_id = `content_${main_menu}`
@@ -193,7 +193,7 @@
 
                 main_menu_obj.products.forEach(product => {
                     $(`#${content_id} div.productlist-wrapper`).append(`
-                        <div class="items">
+                        <div class="items" id ='${product.sku}'>
                             <div class="product-card">
                                 <figure>
                                     <img src="${product.image_product}" alt="productimage" class="img-fluid" />
@@ -205,6 +205,10 @@
                         </div>
 
                     `)
+                    // $(`#${product.sku}`).click(function(){
+                    //     // $(`#${nav_id} img`).attr('src', '')
+                    //     window.location.href = `/product-detail?sku=${product.sku}`
+                    // })
                 }); 
                     
                 count++;
