fix change page to product list

--- a/intearctive-mode-template/pages/roof_template2.html
+++ b/intearctive-mode-template/pages/roof_template2.html
@@ -99,7 +99,7 @@
     $(document).ready(function () {
 
         $(`#btn-product-list`).click(() => {
-            window.location.href = 'cw_product_list.html'
+            window.location.href = 'roof_product_list.html'
         })
 
         $.getJSON('../configs.json', function (jd) {
