--- a/intearctive-mode-template/pages/home_select_template1.html
+++ b/intearctive-mode-template/pages/home_select_template1.html
@@ -77,7 +77,7 @@
   $(document).ready(function () {
 
     $(`#btn-product-list`).click(() => {
-      window.location.href = 'cw_product_list.html'
+      window.location.href = 'home_select_product_list.html'
     })
 
     $.getJSON('../configs.json', function (jd) {
