--- a/intearctive-mode-template/pages/cw_product_list.html
+++ b/intearctive-mode-template/pages/cw_product_list.html
@@ -159,18 +159,28 @@
                 
                 let nav_id = `nav_${main_menu}`  // ex. nav_smart_gadget
                 let content_id = main_menu
-
                 // สร้าง nav tabs
                 $('#nav-tabs').append(`
                     <li class="nav-item" role="presentation">
                         <button class="nav-link  btn-nav-custom" id="${nav_id}" data-bs-toggle="tab" data-bs-target="#${content_id}"
                                 type="button" role="tab" aria-controls="${content_id}"
-                                aria-selected="false">${main_menu_obj.name_th} <img src="../images/house-logo.png"/> </button>
+                                aria-selected="false">${main_menu_obj.name_th} <img src="${main_menu_obj.icon.unactive}"/> </button>
                     </li>
                 `)
 
-                $(`#${nav_id}`).click(function(){
-                    $(`#${nav_id} img`).attr('src', '')
+                $(`#${nav_id}`).click(function(){           
+                    for (var btn_count=0; btn_count<$("#nav-tabs").find('button').length; btn_count++){
+                        let icon_count=0;
+                        for (const [main_menu2, main_menu_obj2] of Object.entries(jd.category_product.ceiling_and_wall.sub_category_product)) {  // วนลูปเพื่อดึง icon image ที่ตรงกับ button เช่นต้นไม้, บ้าน (ส่วนตวน active/unactive คือสีขาว กับ แดง)
+                            console.log(main_menu2)
+                            console.log(main_menu_obj2.icon)
+                            if (icon_count==btn_count){
+                                $(`#nav-tabs button:eq(${btn_count}) img`).attr('src', main_menu_obj2.icon.unactive)
+                            }
+                            icon_count++;
+                        }                        
+                    }
+                    $(this).find('img').attr('src', main_menu_obj.icon.active)                                    
                 })
 
                 // สร้างโครงสำหรับใส่ content แต่ละ id                
@@ -187,6 +197,7 @@
                   $(`#${nav_id}`).addClass('active')  
                   $(`#${content_id}`).addClass('active')  
                   $(`#${nav_id}`).attr('aria-selected', true)  
+                  $(`#${nav_id} img`).attr('src', main_menu_obj.icon.active)
                 }
 
                 
