cinkable product list

--- a/intearctive-mode-template/pages/roof_product_list.html
+++ b/intearctive-mode-template/pages/roof_product_list.html
@@ -217,10 +217,11 @@
                         </div>
 
                     `)
-                    // $(`#${product.sku}`).click(function(){
-                    //     // $(`#${nav_id} img`).attr('src', '')
-                    //     window.location.href = `/product-detail?sku=${product.sku}`
-                    // })
+                    $(`#${product.sku}`).click(function(){
+                        // $(`#${nav_id} img`).attr('src', '')
+                        localStorage.setItem('sku', product.sku)
+                        window.location.href = `cw_product_details_test.html`
+                    })
                 }); 
                     
                 count++;
