--- a/intearctive-mode-template/pages/cw_product_list.html
+++ b/intearctive-mode-template/pages/cw_product_list.html
@@ -216,6 +216,11 @@
                         </div>
 
                     `)
+                    $(`#${product.sku}`).click(function(){
+                        // $(`#${nav_id} img`).attr('src', '')
+                        localStorage.setItem('sku', product.sku)
+                        window.location.href = `cw_product_details_test.html`
+                    })
                 }); 
                     
                 count++;
