--- a/intearctive-mode-template/pages/home_select_product_list.html
+++ b/intearctive-mode-template/pages/home_select_product_list.html
@@ -147,6 +147,12 @@
                     </div>
 
                 `)
+
+                $(`#${product.sku}`).click(function(){
+                        // $(`#${nav_id} img`).attr('src', '')
+                        localStorage.setItem('sku', product.sku)
+                        window.location.href = `cw_product_details_test.html`
+                    })
             
             })
 
