pdp noprice and buy cashier updated

--- a/intearctive-mode-template/pages/cw_product_details.html
+++ b/intearctive-mode-template/pages/cw_product_details.html
@@ -89,7 +89,7 @@
                 <li>ตัวปลอกหุ้มเบาะรองหลังเป็นผ้า Cooling cotton ที่จะให้ความเย็นสบาย พร้อมระบายอากาศได้ดียิ่งขึ้น</li></ul>
                 <div class="d-flex puchase-options">
                  
-                  <div class="  puchase-option2" type="button"><h6>ซื้อออนไลน์
+                  <div class="  puchase-option2 options" type="button"><h6>ซื้อออนไลน์
                  </h6>
                   <img src="../images/qrcode.png" alt="ซื้อออนไลน์ผ่าน
                   www.scghome.com" class="img-fluid"/></div>
