create product details page

--- a/intearctive-mode-template/pages/roof_product_details.html
+++ b/intearctive-mode-template/pages/roof_product_details.html
@@ -18,7 +18,7 @@
   <header class="site-header w-100 header-vb plain">
     <div class="top-panel">
       <h4>คุณอยู่ที่</h4>
-      <h3>Ceiling & wall</h3>
+      <h3>SCG ROOF EXPERT</h3>
     </div>
 
   </header>
