--- a/intearctive-mode-template/pages/home_select_product_details.html
+++ b/intearctive-mode-template/pages/home_select_product_details.html
@@ -18,14 +18,15 @@
     <header class="site-header w-100 header-vb plain">
         <div class="top-panel">
             <h4>คุณอยู่ที่</h4>
-            <h3>Ceiling & wall</h3>
+            <h3>Home Selected</h3>
         </div>
 
     </header>
 
 
     <!-- Main Content -->
-    <main class="main-content w-100 mt-0 interactive-mode2" style="height: 1700px; background: url(/intearctive-mode-template/images/bg-main.png);">
+    <main class="main-content w-100 mt-0 interactive-mode2"
+        style="height: 1700px; background: url(/intearctive-mode-template/images/bg-main.png);">
         <!-- Quote -->
         <div class="quote-section  strip1">
             <p><em>“</em> <span class="txt-red">แตะที่หน้าจอ</span> <br>
@@ -36,12 +37,11 @@
         </div>
 
         <!-- Content -->
-        <div class="content-panel">
+        <div class="content-panel ">
             <button class="btn btn-back">
                 <i class="icon-back"></i>
             </button>
-
-            <!--Innner Content -->
+            <!--Inner Content -->
             <div class="inner-content">
                 <div class="img-gallery">
                     <div class="row">
@@ -54,17 +54,14 @@
 
                                     </div>
                                     <div type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1"
-                                        aria-label="Slide 2">
-                                        <img src="../images/thumb-video.png" class="d-block img-fluid" alt="...">
-                                    </div>
+                                        aria-label="Slide 2"> <img src="../images/thumb-video.png"
+                                            class="d-block img-fluid" alt="..."></div>
                                     <div type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="2"
-                                        aria-label="Slide 3">
-                                        <img src="../images/image 17.png" class="d-block img-fluid" alt="...">
-                                    </div>
+                                        aria-label="Slide 3"> <img src="../images/image 17.png" class="d-block img-fluid"
+                                            alt="..."></div>
                                     <div type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="3"
-                                        aria-label="Slide 4">
-                                        <img src="../images/image 18.png" class="d-block img-fluid" alt="...">
-                                    </div>
+                                        aria-label="Slide 4"> <img src="../images/image 18.png" class="d-block img-fluid"
+                                            alt="..."></div>
 
                                 </div>
                                 <div class="carousel-inner">
@@ -80,36 +77,32 @@
                                             </iframe>
                                         </div>
                                         <div class="carousel-caption d-none d-md-block">
+
                                         </div>
                                     </div>
                                     <div class="carousel-item" data-bs-interval="2000">
                                         <img src="../images/productimg.jpg" class="d-block w-100" alt="...">
                                         <div class="carousel-caption d-none d-md-block">
+
                                         </div>
                                     </div>
                                     <div class="carousel-item">
                                         <img src="../images/productimg.jpg" class="d-block w-100" alt="...">
                                         <div class="carousel-caption d-none d-md-block">
+
                                         </div>
                                     </div>
                                 </div>
 
                             </div>
-                            <div class="map-section" type="button">
-                                <p>สามารถซื้อได้ที่ <br>
-                                    โซน Care Living</p>
-                                <figure>
-                                    <img src="../images/map.png" alt="สามารถซื้อได้ที่ โซน Care Living
-      
-              " />
-                                </figure>
-                            </div>
+
                         </div>
                         <div class="col-6 product-details">
-                            <h6 id="skuid"></h6>
-                            <h2 id="productname"></h2>
-                            <label id="brandid"></label>
-                            <p><span>ราคา</span><strong id="price"> </strong> <a href="#">สินค้าจัดส่งที่บ้าน</a></p>
+                            <h6>รหัสสินค้า 8857126925012</h6>
+                            <h2>Bewell เบาะรองหลัง Ergo-Cushion
+                                Serie Back EC-01 (Cooling Cotton)</h2>
+                            <label>Bewel</label>
+                            <p><span>ราคา</span>1,490 บาท <a href="#">สินค้าจัดส่งที่บ้าน</a></p>
                             <ul>
                                 <li>สายรัดกับเก้าอี้ให้ปรับระดับได้ เพื่อปรับให้เข้า</li>
                                 <li>กับสรีระของแผ่นหลังเรา ตัวเบาะเมมโมรี่โฟม นั่งแล้วตัวไม่ยุบหายลงไปพร้อมคืนตัว 100%
@@ -118,18 +111,44 @@
                                     พร้อมระบายอากาศได้ดียิ่งขึ้น</li>
                             </ul>
                             <div class="d-flex puchase-options">
-
-                                <div class="  puchase-option2" type="button">
-                                    <h6>ซื้อออนไลน์
+                                <div class="  puchase-option2 options buycashier" type="button">
+                                    <h6>ชำระเงิน<br>
+                                        ที่แคชเชียร์
+                                    </h6>
+                                    <i class="icon-bag"></i>
+                                </div>
+                                <div class="separator">
+                                    <span>หรือ</span>
+                                </div>
+                                <div class="  puchase-option2 options qrcode" type="button">
+                                    <h6>สแกน QR<br>
+                                        ซื้อออนไลน์
                                     </h6>
                                     <img src="../images/qrcode.png" alt="ซื้อออนไลน์ผ่าน
-                  www.scghome.com" class="img-fluid" />
+                        www.scghome.com" class="img-fluid" />
                                 </div>
+
                             </div>
                         </div>
                     </div>
                 </div>
 
+                <!-- <div class="video-gallery">
+                <h3>แกลเลอรี่</h3>
+                <div class="row">
+                  <div class="col-6 wrapper">
+                   <figure type="button"> <img src="../images/dummy-yt1.jpg"/></figure>
+                   <figure type="button"><img src="../images/dummy-yt2.jpg"/></figure>
+                   </div>
+                  </div>
+                  <div class="row">
+                   <div class="col-6 wrapper">
+                   <figure type="button"><img src="../images/dummy-yt3.jpg"/></figure>
+                   <figure type="button"><img src="../images/dummy-yt4.jpg"/></figure>         
+                  </div>
+                  
+                </div>
+              </div> -->
             </div>
         </div>
 
