initial load json home_select_product_details

--- a/intearctive-mode-template/pages/cw_product_list.html
+++ b/intearctive-mode-template/pages/cw_product_list.html
@@ -219,7 +219,7 @@
                     $(`#${product.sku}`).click(function(){
                         // $(`#${nav_id} img`).attr('src', '')
                         localStorage.setItem('sku', product.sku)
-                        window.location.href = `cw_product_details_test.html`
+                        window.location.href = `cw_product_details.html`
                     })
                 }); 
                     
