--- a/intearctive-mode-template/pages/home_select_product_list.html
+++ b/intearctive-mode-template/pages/home_select_product_list.html
@@ -146,12 +146,12 @@
                         </div>
                     </div>
 
-                `)
+                `)                
 
                 $(`#${product.sku}`).click(function(){
                         // $(`#${nav_id} img`).attr('src', '')
-                        localStorage.setItem('sku', product.sku)
-                        window.location.href = `cw_product_details_test.html`
+                        localStorage.setItem('id', product.sku)
+                        window.location.href = `home_select_product_details.html`
                     })
             
             })
