--- a/intearctive-mode-template/pages/home_select_product_details.html
+++ b/intearctive-mode-template/pages/home_select_product_details.html
@@ -38,7 +38,7 @@
 
         <!-- Content -->
         <div class="content-panel ">
-            <button class="btn btn-back">
+            <button class="btn btn-back" onclick="history.back()">
                 <i class="icon-back"></i>
             </button>
             <!--Inner Content -->
