--- a/intearctive-mode-template/pages/cw_product_details.html
+++ b/intearctive-mode-template/pages/cw_product_details.html
@@ -71,7 +71,7 @@
                                     </div>
 
                                 </div>
-                                <div class="carousel-inner" id="slide-content">
+                                <div class="carousel-inner" id="slide-content" >
 
                                     <div class="carousel-item active" data-bs-interval="5000">
                                         <div class="embed-responsive embed-responsive-16by9">
@@ -247,6 +247,14 @@
 
                 $('#slide-content>div:eq(0) video source').attr('src', selected_product[0].images_videos[0])
                 $('#slide-content>div:eq(0) video')[0].load()
+
+                // $(`#${product.id}`).append(`<div style="width: 100px; height: 100px; position:absolute; left:8%; top:8%;">  <img style="position:absolute;" src="../images/best_seller_tag1.png"/> <p style="z-index:10; position:absolute;top:3px; left: 12px; color:white; font-size:12px;"> ${product.bestseller_tag} </p>  <img style="position:absolute; top:27%;" src="../images/best_seller_tag2.png"/>  </div>`)  
+                if (selected_product[0].bestseller_tag){
+                    $(`#carouselExampleDark`).append(`<div style="width: 100px; height: 100px; position:absolute; left:-3%; top:5%;">  <img style="position:absolute;" src="../images/best_seller_tag1.png"/> <p style="z-index:10; position:absolute;top:3px; left: 12px; color:white; font-size:12px;"> ${selected_product[0].bestseller_tag} </p>  <img style="position:absolute; top:27%;" src="../images/best_seller_tag2.png"/>  </div>`)  
+                }
+
+
+                 
                 $('#slide-content>div:eq(1) img').attr('src', selected_product[0].images_videos[1])
                 $('#slide-content>div:eq(2) img').attr('src', selected_product[0].images_videos[2])
                 $('#slide-content>div:eq(3) img').attr('src', selected_product[0].images_videos[3])
