--- a/intearctive-mode-template/pages/cw_product_list.html
+++ b/intearctive-mode-template/pages/cw_product_list.html
@@ -64,7 +64,7 @@
                     Banner By categories #1
                 </div> -->
 
-                <div class="tab-content" style="height:690px;" id="productlist-container">
+                <div class="tab-content" style="height:690px; overflow: visible;" id="productlist-container">
                     <!--  ใส่ content จาก js/jquery -->
                     <!-- <div id="test1" class="tab-pane fade show active" role="tabpanel" aria-labelledby="nav-test1">
                         <div class="productlist-wrapper" >
@@ -212,7 +212,7 @@
 
                 main_menu_obj.products.forEach(product => {
                     $(`#${content_id} div.productlist-wrapper`).append(`
-                        <div class="items" id ='${product.id}'>
+                        <div class="items" id ='${product.id}' style="position:relative;">
                             <div class="product-card">
                                 <figure>
                                     <img src="${product.image_product}" alt="productimage" class="img-fluid" />
@@ -221,9 +221,13 @@
                                     ไลท์วูด<br> (Litewood by Fameline)
                                 </label>
                             </div>
+                            
                         </div>
 
                     `)
+                    if (product.bestseller_tag){
+                        $(`#${product.id}`).append(`<div style="width: 100px; height: 100px; position:absolute; left:8%; top:8%;">  <img style="position:absolute;" src="../images/best_seller_tag1.png"/> <p style="z-index:10; position:absolute;top:3px; left: 12px; color:white; font-size:12px;"> ${product.bestseller_tag} </p>  <img style="position:absolute; top:27%;" src="../images/best_seller_tag2.png"/>  </div>`)  
+                    }
                     $(`#${product.id}`).click(function(){
                         // $(`#${nav_id} img`).attr('src', '')
                         localStorage.setItem('id', product.id)
